Revision history for Search-ESsearcher

0.4.0	 2019-06-05/05:0
		 - Make host searching work better for syslog. Thanks, Kevin Greene.

0.3.1	 2019-06-05/05:0
		 - Add missing options to postfix pod.

0.3.0	 2019-06-05/01:30
		 - Add postfix support.
		 - Add repo info.

0.2.0	 2019-06-03/04:30
		 - The bf2b template now properly processes --ip
		 - Add the httpAccess template.
		 - Add a missing flag to the help for bf2b.
		 - Added the option for pretty printing -S via -p


0.1.0	 2019-06-02/09:00
		 - Add bf2b, beats fail2ban support.
		 - Actually set the output template now.
		 - name validation no longer chokes on numbers.
		 - Now prints the proper help info instead of the
		   one for the default, syslog.

0.0.0	 2019-06-02/04:40
		 - Initial release.
